--- a/src/pages/claim-reward-detail/claim-reward-detail.html
+++ b/src/pages/claim-reward-detail/claim-reward-detail.html
@@ -13,33 +13,52 @@
 </ion-header>
 
 
-<ion-content padding>
-
-  <ion-card>
-    <ion-item>
-      <h2>Microwave</h2>
-    </ion-item>
-    <img src="../../assets/img/microwave.jpg">
-    <ion-item>
-     <h2>05/09/2017</h2>
-     <h3 item-end>100,000 pts</h3>
-
-   </ion-item>
-
-
-
- </ion-card>
-
+<ion-content>
  <ion-card>
-  <ion-item>
-    <h2>វិក័យប័ត្រទទួលរង្វាន់</h2>
-  </ion-item>
-
-  <img src="../../assets/img/del-slip.jpg">
-
+  <ion-card-header>
+    <h1>{{store?.name}} - {{store?.storeTypeName}}</h1>
+  </ion-card-header>
+  <ion-card-content>
+    <ion-list>
+      <ion-item>
+       រង្វាន់
+       <label item-end>{{storeReward?.name}}</label>
+     </ion-item>
+     <ion-item>
+       ពិន្ទុ
+       <label item-end>{{storeReward?.points}} ពិន្ទុ</label>
+     </ion-item>
+     <ion-item>
+       ប្តូរថ្ងៃ
+       <label item-end>{{storeReward?.claimedAt}}</label>
+     </ion-item>
+     <ion-item>
+      ទទួលថ្ងៃ
+      <label item-end>{{storeReward?.deliveriedAt}}</label>
+    </ion-item>
+  </ion-list>
+</ion-card-content>
 </ion-card>
 
 
+<ion-card>
+  <ion-item>
+    វិក័យប័ត្រទទួលរង្វាន់
+  </ion-item>
+
+
+  <img src="{{pathForImage(storeReward?.imageUrl)}}" (click)="getPicture()">
+
+</ion-card>
+
+<div padding class="flex-container">
+  <button color="light" class="flex-center" ion-button icon-start round padding icon-only (click)="getPicture()">
+   <ion-icon name="camera"></ion-icon>
+ </button>
+</div>
+
 <!-- <button ion-button block (click)="backToClaimReward()">បានទទួល</button> -->
-<button ion-button block color="light" (click)="backToClaimReward()">បានទទួលរួចរាល់</button>
+<div padding>
+ <button ion-button round block color="primary" (click)="deliverReward()">ទទួលរួចរាល់</button>
+</div>
 </ion-content>
