--- a/src/pages/claim-reward-detail/claim-reward-detail.html
+++ b/src/pages/claim-reward-detail/claim-reward-detail.html
@@ -26,7 +26,7 @@
      </ion-item>
      <ion-item>
        ពិន្ទុ
-       <label item-end>{{storeReward?.points}} ពិន្ទុ</label>
+       <label item-end>{{storeReward?.spent_points}} ពិន្ទុ</label>
      </ion-item>
      <ion-item>
        ប្តូរថ្ងៃ
